[gd_scene load_steps=2 format=3 uid="uid://debugui001"]

[ext_resource type="Script" path="res://scripts/debug_ui.gd" id="1_debug_ui"]

[node name="DebugUI" type="CanvasLayer"]
script = ExtResource("1_debug_ui")
layer = 100

[node name="SidePanel" type="PanelContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="SidePanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="SidePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="InspectorLabel" type="Label" parent="SidePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "INSPECTOR"
horizontal_alignment = 1

[node name="InspectorSection" type="VBoxContainer" parent="SidePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="PlaceholderLabel" type="Label" parent="SidePanel/MarginContainer/VBoxContainer/InspectorSection"]
layout_mode = 2
text = "Select an entity to inspect"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="SidePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ToolsLabel" type="Label" parent="SidePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TOOLS"
horizontal_alignment = 1

[node name="ToolsSection" type="VBoxContainer" parent="SidePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="PlaceholderLabel" type="Label" parent="SidePanel/MarginContainer/VBoxContainer/ToolsSection"]
layout_mode = 2
text = "Spawn and debug tools"
horizontal_alignment = 1
autowrap_mode = 2

[node name="BottomBar" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = -280.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="BottomBar"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="BottomBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="JobStatusLabel" type="Label" parent="BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Jobs: 0 Posted | 0 Claimed | 0 In Progress | 0 Completed"
